re PR target/52451 (gcc w/i387 float generates fucom rather than fcom for floating point comparsons)

PR target/52451
	* config/i386/i386.c (ix86_fp_compare_mode): Return CCFPmode
	for ordered inequality comparisons even with TARGET_IEEE_FP.

testsuite/ChangeLog:

	PR target/52451
	* gcc.dg/torture/pr52451.c: New test.

From-SVN: r253986